@@ -44,6 +44,9 @@ Version 0.1.3 (2010-??-??)
 - Fixed multiple URL problems in address book module
 - Fixed multiple URL and template problems in shopping cart module
 - Fixed bug in runonce.php, must not use TRUNCATE to empty cart table
+- Fixed: Invoice title not showing up in iso_invoice.tpl if no logo image set
+- Added: Batch invoice printing, by status
+- Added: Consolidation of order management global operations into a tools menu
 
 Version 0.1.2 (2010-06-20)
 ------------------------------
